06_rect/grade.txt
Grading at Thu Jul  9 16:58:23 UTC 2020
Attempting to compile rectangle.c
rectangle.c: In function ‘intersection’:
rectangle.c:39:82: error: expected statement before ‘)’ token
   if ((max(r1.x, r2.x) > min(r1fx, r2fx)) || (max(r1.y, r2.y) > min(r1fy, r2fy)))) {
                                                                                  ^
The code did not compile!

Overall Grade: F
